// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Fragment>
  <span>
    onboarding.build
  </span>
  <RenderOptions
    label="onboarding.build"
    onCheck={[Function]}
    optionLabelKey="onboarding.build"
    options={
      Array [
        "dotnet",
        "maven",
        "gradle",
        "cfamily",
        "other",
      ]
    }
  />
  <AnalysisCommand
    onStepValidationChange={[MockFunction]}
    projectKey="my-project"
  />
</Fragment>
`;

exports[`should render correctly: dotnet 1`] = `
<Fragment>
  <span>
    onboarding.build
  </span>
  <RenderOptions
    checked="dotnet"
    label="onboarding.build"
    onCheck={[Function]}
    optionLabelKey="onboarding.build"
    options={
      Array [
        "dotnet",
        "maven",
        "gradle",
        "cfamily",
        "other",
      ]
    }
  />
  <AnalysisCommand
    buildTool="dotnet"
    onStepValidationChange={[MockFunction]}
    projectKey="my-project"
  />
</Fragment>
`;

exports[`should render correctly: gradle 1`] = `
<Fragment>
  <span>
    onboarding.build
  </span>
  <RenderOptions
    checked="gradle"
    label="onboarding.build"
    onCheck={[Function]}
    optionLabelKey="onboarding.build"
    options={
      Array [
        "dotnet",
        "maven",
        "gradle",
        "cfamily",
        "other",
      ]
    }
  />
  <AnalysisCommand
    buildTool="gradle"
    onStepValidationChange={[MockFunction]}
    projectKey="my-project"
  />
</Fragment>
`;

exports[`should render correctly: maven 1`] = `
<Fragment>
  <span>
    onboarding.build
  </span>
  <RenderOptions
    checked="maven"
    label="onboarding.build"
    onCheck={[Function]}
    optionLabelKey="onboarding.build"
    options={
      Array [
        "dotnet",
        "maven",
        "gradle",
        "cfamily",
        "other",
      ]
    }
  />
  <AnalysisCommand
    buildTool="maven"
    onStepValidationChange={[MockFunction]}
    projectKey="my-project"
  />
</Fragment>
`;

exports[`should render correctly: other 1`] = `
<Fragment>
  <span>
    onboarding.build
  </span>
  <RenderOptions
    checked="other"
    label="onboarding.build"
    onCheck={[Function]}
    optionLabelKey="onboarding.build"
    options={
      Array [
        "dotnet",
        "maven",
        "gradle",
        "cfamily",
        "other",
      ]
    }
  />
  <AnalysisCommand
    buildTool="other"
    onStepValidationChange={[MockFunction]}
    projectKey="my-project"
  />
</Fragment>
`;

exports[`should render correctly: without C 1`] = `
<Fragment>
  <span>
    onboarding.build
  </span>
  <RenderOptions
    label="onboarding.build"
    onCheck={[Function]}
    optionLabelKey="onboarding.build"
    options={
      Array [
        "dotnet",
        "maven",
        "gradle",
        "other",
      ]
    }
  />
  <AnalysisCommand
    onStepValidationChange={[MockFunction]}
    projectKey="my-project"
  />
</Fragment>
`;
